syntax = "proto3";

option go_package = "github.com/raghav1030/NaboServer/libs/proto/gen/go/location/v1;locationv1";

package location.v1;

import "google/protobuf/timestamp.proto";

message UpdateLocationRequest {
  string user_id = 1;
  double latitude = 2;
  double longitude = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message UpdateLocationResponse {
  bool success = 1;
}

message GetNearbyUsersRequest {
  double latitude = 1;
  double longitude = 2;
  double radius_km = 3;
  repeated string interest_ids = 4;
  string intent = 5;
}

message GetNearbyUsersResponse {
  repeated User users = 1;
}

message User {
  string user_id = 1;
  double latitude = 2;
  double longitude = 3;
  repeated string interests = 4;
  string intent = 5;
}

service LocationService {
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse);
  rpc GetNearbyUsers(GetNearbyUsersRequest) returns (GetNearbyUsersResponse);
}